[package]
edition = "2021"
name = "rust_http_parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "request_get"
path = "examples/request_get.rs"
[[example]]
name = "request_post"
path = "examples/request_post.rs"
[[example]]
name = "response_get"
path = "examples/response_get.rs"
[[example]]
name = "response_post"
path = "examples/response_post.rs"
